missing project name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
+project(AtomIT)
+
 
 #####################################################################
 ## Build parameters of the Atom-IT server
